update preloader overflow

--- a/teams/teams.html
+++ b/teams/teams.html
@@ -120,7 +120,7 @@
             </div>
 
         <!-- VIDEO-->
-        <div class="row">
+        <div class="row" style="margin: 0;">
         	<div class=" col-lg-6  col-sm-12 ">
         		<div class="gif">
         			<video style="width:500px" id="vid" autoplay loop muted>
